[gd_scene load_steps=31 format=2]

[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/rocket-sprites/column.png" type="Texture" id=1]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/rocket-sprites/rocket-wick/003.png" type="Texture" id=2]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/rocket-sprites/rocket-animation/004.png" type="Texture" id=3]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/rocket-sprites/rocket-animation/003.png" type="Texture" id=4]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/rocket-sprites/rocket-wick/000.png" type="Texture" id=5]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/rocket-sprites/rocket-wick/001.png" type="Texture" id=6]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/rocket-sprites/rocket-wick/002.png" type="Texture" id=7]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/rocket-sprites/rocket-wick/004.png" type="Texture" id=8]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/rocket-sprites/rocket-animation/001.png" type="Texture" id=9]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/rocket-sprites/rocket-animation/002.png" type="Texture" id=10]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/gimmicks-scripts/rocket-controller-object.gd" type="Script" id=11]
[ext_resource path="res://game-assets/game-sprites/player-sprites/characters-sprites/sonic-sprites/pulley-hold/003.png" type="Texture" id=12]
[ext_resource path="res://game-assets/game-sprites/player-sprites/characters-sprites/sonic-sprites/pulley-hold/005.png" type="Texture" id=13]
[ext_resource path="res://game-assets/game-sprites/player-sprites/characters-sprites/sonic-sprites/pulley-hold/006.png" type="Texture" id=14]
[ext_resource path="res://game-assets/game-sprites/player-sprites/characters-sprites/sonic-sprites/pulley-hold/004.png" type="Texture" id=15]
[ext_resource path="res://game-assets/game-sprites/player-sprites/characters-sprites/sonic-sprites/pulley-hold/001.png" type="Texture" id=16]
[ext_resource path="res://game-assets/game-sprites/player-sprites/characters-sprites/sonic-sprites/pulley-hold/002.png" type="Texture" id=17]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/test-zone-gimmicks-sprites/rocket-sprites/rocket-animation/color.png" type="Texture" id=18]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/gimmicks-scripts/rocket-object.gd" type="Script" id=19]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 2 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

// Which color you want to change
uniform vec4 u_color_key : hint_color;
// Which color to replace it with
uniform vec4 u_replacement_color : hint_color;
// How much tolerance for the replacement color (between 0 and 1)
uniform float u_tolerance;

void fragment() {
    // Get color from the sprite texture at the current pixel we are rendering
    vec4 original_color = texture(TEXTURE, UV);
    vec3 col = original_color.rgb;
    // Get a rough degree of difference between the texture color and the color key
    vec3 diff3 = col - u_color_key.rgb;
    float m = max(max(abs(diff3.r), abs(diff3.g)), abs(diff3.b));
    // Change color of pixels below tolerance threshold, while keeping shades if any (a bit naive, there may better ways)
    float brightness = length(col);
    col = mix(col, u_replacement_color.rgb * brightness, step(m, u_tolerance));
    // Assign final color for the pixel, and preserve transparency
    COLOR = vec4(col.rgb, original_color.a);
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/u_color_key = Color( 1, 0, 0, 1 )
shader_param/u_replacement_color = Color( 0, 0.968627, 1, 1 )
shader_param/u_tolerance = 100.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
length = 1.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ "default", "default" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -17, 0 ), Vector2( -17, 0 ), Vector2( -16, 0 ), Vector2( -16, 0 ), Vector2( -17, 0 ), Vector2( -17, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 0
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=5]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ "default", "default" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 6 ), Vector2( 0, 7 ), Vector2( 0, 4 ), Vector2( 0, 4 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SnappedSonic:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Wick:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Wick:animation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "default" ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Wick:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Wick:offset")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("SnappedSonic:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Wick:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=7]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Wick:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ "default", "default" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Wick:offset")
tracks/1/interp = 0
tracks/1/loop_wrap = false
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 2 ), Vector2( 0, 1 ), Vector2( 0, 3 ), Vector2( 0, 1 ), Vector2( 0, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Wick:frame")
tracks/2/interp = 0
tracks/2/loop_wrap = false
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 1, 2, 3, 2, 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SnappedSonic:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Wick:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 8, 20 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 10, 17 )

[node name="Rocket" type="Node2D"]
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Column" type="Sprite" parent="."]
position = Vector2( 0, 32 )
texture = ExtResource( 1 )

[node name="Rocket" type="Node2D" parent="."]
script = ExtResource( 19 )
__meta__ = {
"_edit_group_": true
}

[node name="RocketSprite" type="AnimatedSprite" parent="Rocket"]
frames = SubResource( 1 )

[node name="Wick" type="AnimatedSprite" parent="Rocket/RocketSprite"]
position = Vector2( -2, 28 )
frames = SubResource( 2 )

[node name="ShaderPos" type="Sprite" parent="Rocket/RocketSprite"]
visible = false
material = SubResource( 9 )
texture = ExtResource( 18 )

[node name="SnappedSonic" type="AnimatedSprite" parent="Rocket/RocketSprite"]
visible = false
position = Vector2( 0, 6 )
frames = SubResource( 3 )
offset = Vector2( -17, 0 )

[node name="SsAnimator" type="AnimationPlayer" parent="Rocket/RocketSprite/SnappedSonic"]
anims/snapped-sonic = SubResource( 4 )

[node name="RocketAnimator" type="AnimationPlayer" parent="Rocket/RocketSprite"]
autoplay = "Idle"
playback_speed = 1.5
anims/Ascending = SubResource( 5 )
anims/Idle = SubResource( 6 )
anims/WickBurning = SubResource( 7 )

[node name="RocketHitBox" type="Area2D" parent="Rocket"]
position = Vector2( 0, 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Rocket/RocketHitBox"]
shape = SubResource( 12 )

[node name="SonicHitBox" type="Area2D" parent="Rocket"]
visible = false
position = Vector2( -15, 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Shape" type="CollisionShape2D" parent="Rocket/SonicHitBox"]
shape = SubResource( 11 )

[node name="Audios" type="AudioStreamPlayer2D" parent="Rocket"]
bus = "SFX"

[node name="SpawnPuff" type="Position2D" parent="Rocket"]
position = Vector2( 0, 24 )

[connection signal="exploded" from="Rocket" to="." method="_on_Rocket_exploded"]
[connection signal="body_shape_entered" from="Rocket/RocketHitBox" to="Rocket" method="_on_RocketHitBox_body_shape_entered"]
